--- a/app/views/facilities/show.html.erb
+++ b/app/views/facilities/show.html.erb
@@ -108,15 +108,31 @@
 
 
   <div class="facility-show--rate-comment">
-    <% if @facility_comments %>
-      <div class="facility-show--rate">
+    <div class="facility-show--rate">
         <h2>Facility Evaluation</h2>
+        <div id="evaluate_stars_avg">
+          <label>平均評価</label>
+          <script>
+            $('#evaluate_stars_avg').raty({
+              size: 36,
+              starOff: '<%= asset_path('star-off.png') %>',
+              starOn: '<%= asset_path('star-on.png') %>',
+              starHalf: '<%= asset_path('star-half.png') %>',
+              half: true,
+              readOnly: true,
+              score: <%= @facility_comments.average(:rate).to_f.round(1) %>,
+            });
+          </script>
+        </div>
+      <% if @facility_comments.present? %>
         <%= bar_chart @data, colors: ["orange"], min: 0, max: 100 %>
-      </div>
-    <% end %>
+      <% else %>
+        コメントがありません
+      <% end %>
+  　</div>
 
     <div class="facility-show--comments">
-      <h2>Comments</h2>
+      <h2>Comments（<%= @facility_comments.count %>件）</h2>
       <% if current_user %>
         <div class="facility-show--new-comment">
           <%= form_with(model: [@facility, @comment], local: true) do |f| %>
@@ -143,7 +159,7 @@
       starOn: "<%= asset_path('star-on.png') %>",
       starOff: "<%= asset_path('star-off.png') %>",
       starHalf: "<%= asset_path('star-half.png') %>",
-      scoreName: 'facility_comment[rate]' //登録するモデル名とカラム名を記述
+      scoreName: 'facility_comment[rate]'
     });
   </script>
 
