--- a/app/views/facility_favorites/index.html.erb
+++ b/app/views/facility_favorites/index.html.erb
@@ -1,10 +1,3 @@
-<div class="container mt-5">
-  <div class="row">
-    <div class="col-md-3">
-      <%= render "users/info", user: @user %>
-    </div>
-    <div class="col-md-9">
-      <%= render "posts/posts", posts: @posts %>
-    </div>
-  </div>
-</div>
+<div class="facilities">
+  <%= render "facilities/index", facilities: @facilities %>
+<div class="facilities">
