--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,12 +2,12 @@
   <div class="user-show--info">
     <%= render "users/info", user: @user %>
     <div class="user-show--trash-box">
-      <img src="/assets/trash-box.png">
+      <%= image_tag("trash-box.png") %>
     </div>
   </div>
 
   <div class="user-show--posts">
-    <%= render "posts/posts", posts: @posts, title: "/assets/mypost.png" %>
+    <%= render "posts/posts", posts: @posts, title: "mypost.png" %>
   </div>
 </div>
 
