--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -29,11 +29,18 @@
       width: 30%;
       background-image: image-url('red.png');
       background-size: cover;
-
     }
     &__detail{
       padding-top: 30px;
       padding-left: 30px;
+      img{
+      width: 50px;
+      height: 50px;
+      border: 1px solid black;
+      border-radius: 50px;
+      margin-right: 10px;
+      box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.4);
+    }
 
     }
     &__content{
