--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -1,5 +1,5 @@
 <% if model.errors.any? %>
   <% model.errors.full_messages_for(attribute).each do |message| %>
-    <p style="color: red;"><%= message %></p>
+    <p style="color: red; padding-left: 10px"><%= message %></p>
   <% end %>
 <% end %>
