--- a/app/views/homes/game_west.html.erb
+++ b/app/views/homes/game_west.html.erb
@@ -1,27 +1,18 @@
 <div class="game">
-  <h1>順位表</h1>
-  <h2>West</h2>
+  <h1>Ranking west</h1>
 
   <div class="game--conference">
-    <%= link_to game_east_path(year: :"2020") do %>
-      <div class="game--conference__east">
-        <p class="game--link__east">East</p>
-      </div>
-    <% end %>
-    <%= link_to game_east_path(year: :"2020") do %>
-      <div class="game--conference__west">
-        <p class="game--link__west">West</p>
-      </div>
-    <% end %>
-  </div>
-
-  <div class="game--years">
-    <%= link_to "2018", game_west_path(year: :"2018"), id: "under_line" %>
-    <%= link_to "2019", game_west_path(year: :"2019"), id: "under_line" %>
-    <%= link_to "2020", game_west_path(year: :"2020"), id: "under_line" %>
+    <%= render "homes/conference" %>
   </div>
 
   <table class="game--table">
+    <div class="game--years">
+      <ul class="game--years__tab">
+        <li><%= link_to "2018", game_west_path(year: :"2018"), remote: true %></li>
+        <li><%= link_to "2019", game_west_path(year: :"2019"), remote: true %></li>
+        <li><%= link_to "2020", game_west_path(year: :"2020"), remote: true %></li>
+      </ul>
+    </div>
     <thead>
       <tr>
         <th>順位</th>
@@ -33,18 +24,8 @@
         <th>勝率</th>
       </tr>
     </thead>
-    <tbody>
-      <% @team_rank.each do |rank| %>
-        <tr>
-          <td><%= rank["conference"]["rank"] %></td>
-          <td class="game--table__team"><img src="<%= rank["teamId"]["logo"] %>" style="width: 50px;"><%= rank["teamId"]["fullName"] %></td>
-          <td><%= rank["win"] %></td>
-          <td><%= rank["loss"] %></td>
-          <td><%= rank[ "gamesBehind"] %></td>
-          <td><%= rank["lastTenWin"] %>-<%= rank["lastTenLoss"] %></td>
-          <td><%= rank["winPercentage"] %></td>
-        </tr>
-      <% end %>
+    <tbody class="game--rank">
+      <%= render "homes/game", team_rank: @team_rank %>
     </tbody>
   </table>
 </div>
