--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -89,6 +89,16 @@
 
 // Game画面のレイアウト
 .game{
+  width: 100%;
+  background: black;
+  padding: 50px 10px;
+  h1{
+    color: white;
+    padding: 0.25em 0.5em;
+    font-size: 50px;
+    margin-left: 20px;
+    border-left: solid 5px #7db4e6;
+  }
   &--conference{
     position: relative;
     margin: 30px 0 30px 30px;
@@ -126,16 +136,41 @@
     }
   }
   &--years{
+    width: 70%;
     margin: 0 auto;
+    &__tab{
+      display: flex;
+      flex-wrap: wrap;
+      margin: 0;
+      padding: 0;
+      li{
+        width: 33.33%;
+        list-style: none;
+        font-size: 30px;
+        text-align: center;
+        a{
+      	display: block;
+      	background:#AAAAAA;
+      	margin: 0 2px;
+      	padding: 25px 20px;
+        }
+      }
+      .active a{
+    	  background: white;
+    	  font-weight: bold;
+      }
+    }
   }
   &--table {
-    margin: 50px auto;
+    width: 70%;
+    margin: 0 auto;
     border-collapse: collapse;
     text-align: center;
     th, td {
       height: 80px;
       padding: 10px 40px;
       border: 1px solid #333;
+      background: white;
     }
     th {
       background-color: #2c88d9;
@@ -155,9 +190,35 @@
     background-size: cover;
     background-attachment: fixed;
     background-position: 100px 130px;
+    padding: 50px 10px;
     h1{
       color: white;
-      padding: 20px;
+      padding: 0.25em 0.5em;
+      font-size: 50px;
+      margin-left: 20px;
+      border-left: solid 5px #7db4e6;
+    }
+  }
+  &--paginate{
+    width: 1000px;
+    .pagination {
+      justify-content: center;
+      text-align: center;
+      li{
+        display: inline-block;
+        min-width: 50px;
+        background-color: white;
+        border: 1px solid blue;
+        border-radius: 50px;
+        margin: 2px;
+        padding: 0 5px;
+        &:hover{
+          background: #00FFFF	;
+        }
+      }
+      .active{
+        background: #00FFFF	;
+      }
     }
   }
   &--articles{
