--- a/app/views/homes/news.html.erb
+++ b/app/views/homes/news.html.erb
@@ -1,7 +1,11 @@
 <div class="news">
   <div class="news--main">
     <h1>News</h1>
-    <%= paginate @articles %>
+
+    <div class="news--paginate">
+      <%= paginate @articles %>
+    </div>
+
     <div class="news--articles">
       <% @articles.each do |article| %>
         <div class="news--articles__item">
@@ -25,6 +29,9 @@
         </div>
       <% end %>
     </div>
-    <%= paginate @articles %>
+
+    <div class="news--paginate">
+      <%= paginate @articles %>
+    </div>
   </div>
 </div>
