--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -277,8 +277,11 @@ input {
   height: 700px;
   background: image-url('basketball.jpg');
   background-size: cover;
-   background-position: 25% 50%;
+  background-position: 25% 50%;
  }
+}
+.google{
+ text-align: center;
 }
 
 
