--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -18,7 +18,7 @@
   }
   &--news{
     width: 80%;
-    min-height: 600px;
+    min-height: 620px;
     margin: 100px auto;
     background-size: cover;
     background-image: image-url('10.jpg');
@@ -26,13 +26,133 @@
   }
   &--text{
     width: 40%;
-    height: 580px;
-    color: white;
+    height: 600px;
     background: rgba(255,255,255, 0.6);
     text-align: center;
     position: absolute;
     right: 10px;
     top: 10px;
+  }
+  &--fixed-background {
+    min-height: 100vh;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    .title{
+      width: 100%;
+      text-align: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+
+      background-color: rgba(0,0,0,0.7);
+      padding: 10px 20px;
+
+      h1{
+        text-weight: bold;
+        font-size: 60px;
+        letter-spacing: 10px;
+        &:before,
+        &:after {
+          position: absolute;
+          left: 0;
+          content: '';
+          width: 100%;
+          height: 6px;
+          box-sizing: border-box;
+        }
+        &:before {
+          top: 0;
+          border-top: 2px solid #ccc;
+          border-bottom: 1px solid #ccc;
+        }
+        &:after {
+          bottom: 0;
+          border-top: 1px solid #ccc;
+          border-bottom: 2px solid #ccc;
+        }
+      }
+    }
+  }
+
+  &--background-1 {
+    background-image: image_url("cort.jpeg");
+  }
+
+  &--background-2 {
+    background-image: image_url("3.jpeg");
+  }
+  &--scroll-background{
+    padding: 20px;
+    height: 50vh;
+    text-align: center;
+    color: white;
+    h1{
+      width: 300px;
+      text-weight: bold;
+      font-size: 40px;
+      letter-spacing: 10px;
+      padding: 10px;
+      border-bottom: solid 5px #7db4e6;
+      margin: 10px auto;
+    }
+    p{
+      font-size: 20px;
+      padding: 10px;
+    }
+  }
+  &--sign-up {
+    border: 1px solid white;
+    background: transparent;
+    color: white;
+    display: block;
+    width: 100px;
+    margin: 5px auto;
+    padding: 5px;
+    transition: 250ms background ease-in;
+    &:hover, &:focus {
+     background: white;
+     color: black;
+     transition: 250ms background ease-in;
+    }
+   }
+  &--fadein{
+  	opacity : 0;
+  	visibility: hidden;
+  	transition: 2s;
+  	transform: translateY(30px);
+  	padding: 10px;
+  }
+  /*アニメーション要素までスクロールした時のスタイル*/
+  &--fadein.active{
+  	opacity: 1;
+  	visibility: visible;
+  	transform: translateY(0);
+  	&:before,
+    &:after {
+      position: absolute;
+      left: 0;
+      content: '';
+      width: 100%;
+      height: 6px;
+      box-sizing: border-box;
+    }
+    &:before {
+      top: 0;
+      border-top: 2px solid #ccc;
+      border-bottom: 1px solid #ccc;
+    }
+    &:after {
+      bottom: 0;
+      border-top: 1px solid #ccc;
+      border-bottom: 2px solid #ccc;
+    }
+  }
+  &--background-color{
+    background-color: #444444;
   }
   &--info{
     position: relative;
@@ -85,6 +205,39 @@
       background: linear-gradient(to right, rgb(230, 90, 90), transparent);
     }
   }
+}
+
+
+// スライドnewsの設定
+.slider {
+    width: 95%;
+    margin: 0 auto;
+}
+
+.slider .slick-slide {
+	transform: scale(0.8);
+	transition: all .5s;
+	opacity: 0.5;
+}
+
+.slider .slick-slide.slick-center{
+	transform: scale(1);
+	opacity: 1;
+}
+
+/*ドットナビゲーションの設定*/
+.slick-dots button {
+    color: transparent;
+    outline: none;
+    width: 8px;/*ドットボタンのサイズ*/
+    height: 8px;/*ドットボタンのサイズ*/
+    display: block;
+    border-radius: 50%;
+    background: #ccc;/*ドットボタンの色*/
+}
+
+.slick-dots .slick-active button{
+    background: blue;/*ドットボタンの現在地表示の色*/
 }
 
 // Game画面のレイアウト
@@ -231,6 +384,7 @@
       background-color: white;
       margin: 20px auto;
       border: 2px solid black;
+      text-align: center;
     }
     &__image{
       margin-left: 10px;
