--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -24,8 +24,8 @@
     	<h1>バスケ施設</h1>
     	<p>「BaskeNavのバスケ施設」では、バスケの出来る施設の情報や予約ができます。</p>
       <p>また、予約状況を確認することで、家から簡単に施設利用できるか確認でき、</p>
-    	<p>DM機能を使えば予約しているバスケファンと</p>
-    	<p>いつでもどこでも新しいバスケファンとの交流を深めて一緒にプレイすることもできます（ルールは守りましょう)</p>
+    	<p>施設予約をしているバスケファンDM機能を使いメッセージを送ると</p>
+    	<p>いつでもどこでも一緒にバスケをすることもできます（ルールは守りましょう)</p>
     	<%= link_to "Sign-up", new_user_registration_path, class: "main-contents--sign-up" %>
   	</div>
   </div>
@@ -33,7 +33,7 @@
   <div class="main-contents--fixed-background main-contents--background-2">
   	<div class="title">
       <h1>Post your experience</h1>
-      <p>let's post and share the great experience with your friendes</p>
+      <p>let's post and share the great experience with your friends</p>
     </div>
   </div>
 
