--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,8 +2,9 @@
   <div class="header-top">
     <div class="header-top__logo">BaskeNav</div>
     <div class="header-top__admin">
-      <%= link_to "施設登録の方はこちら", new_admin_registration_path, class: "header-top__sign-up" %>
-      <%= link_to "施設管理者用ログイン", new_admin_session_path, class: "header-top__sign-in" %>
+      <%= link_to 'ゲストログイン(閲覧用)', guest_sign_in_path, class: "guest-login", method: :post %>
+      <%= link_to "施設登録の方はこちら", new_admin_registration_path, class: "header-top__sign-up under_line" %>
+      <%= link_to "施設管理者用ログイン", new_admin_session_path, class: "header-top__sign-in under_line" %>
     </div>
   </div>
 
