--- a/app/views/facilities/show.html.erb
+++ b/app/views/facilities/show.html.erb
@@ -154,53 +154,15 @@
     </div>
   </div>
   <div class="facility-show--rate-comment">
-    <div class="facility-show--rate">
-      <h2 class="title_border">Facility Evaluation</h2>
-      <div id="evaluate_stars_avg">
-        <label>平均評価</label>
-        <script>
-          $('#evaluate_stars_avg').raty({
-            size: 36,
-            starOff: '<%= asset_path('star-off.png') %>',
-            starOn: '<%= asset_path('star-on.png') %>',
-            starHalf: '<%= asset_path('star-half.png') %>',
-            half: true,
-            readOnly: true,
-            score: <%= @facility_comments.average(:rate).to_f.round(1) %>,
-          });
-        </script>
-      </div>
-      <div class="facility-show--graph">
-        <% if @facility_comments.present? %>
-          <%= bar_chart @data, colors: ["orange"], min: 0, max: 100 %>
-        <% else %>
-          コメントがありません
-        <% end %>
-      </div>
+    <div class="facility-show--rate" id="facility-show--rate">
+      <%= render "facility_comments/graph", facility_comments: @facility_comments, data: @data %>
   　</div>
 
     <div class="facility-show--comment-form">
-      <h2 class="title_border">Comments（<%= @facility_comments.count %>件）</h2>
-      <% if current_user %>
-        <div id="facility-show--new-comment">
-          <%= form_with(model: [@facility, @comment]) do |f| %>
-            <div id="evaluate_stars">
-              <label>評価</label>
-              <script>
-                $('#evaluate_stars').raty({
-                  starOn: "<%= asset_path('star-on.png') %>",
-                  starOff: "<%= asset_path('star-off.png') %>",
-                  starHalf: "<%= asset_path('star-half.png') %>",
-                  scoreName: 'facility_comment[rate]'
-                });
-              </script>
-            </div>
-            <%= f.label :comment %><br>
-            <%= f.text_area :comment %>
-            <%= f.submit "コメントする" %>
-          <% end %>
-        </div>
-      <% end %>
+
+      <div id="facility-show--form">
+        <%= render "facility_comments/form", facility: @facility, comment: @comment, facility_comments: @facility_comments %>
+      </div>
 
       <div id="facility-show--comments">
         <%= render "facility_comments/index", facility_comments: @facility_comments %>
