--- a/app/views/facility_comments/create.js.erb
+++ b/app/views/facility_comments/create.js.erb
@@ -1,3 +1,3 @@
 $('#facility-show--comments').html('<%= j(render "facility_comments/index", facility_comments: @facility_comments) %>');
-$('#evaluate_stars').removeId('#evaluate_stars');
-$('#facility_comment_comment').val('');
+$('#facility-show--form').html('<%= j(render "facility_comments/form", facility: @facility, comment: @comment_new, facility_comments: @facility_comments) %>');
+$('#facility-show--rate').html('<%= j(render "facility_comments/graph", facility_comments: @facility_comments, data: @data) %>');
