--- a/app/assets/stylesheets/relationships.scss
+++ b/app/assets/stylesheets/relationships.scss
@@ -26,3 +26,68 @@
     }
   }
 }
+
+// フォローモーダルウィンドウ
+.follow{
+  &--background{
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  &--header{
+    padding: 10px ;
+    text-align: center;
+    h1{
+      position: relative;
+    }
+    h1:after{
+      content: "";
+      border: 1px solid blue;
+      width: 80px;
+      height: 1px;
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translate(-50%);
+    }
+  }
+  &--member{
+    width: 500px;
+    height: 600px;
+    background-color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  &--following-info,
+  &--follower-info{
+    height: 500px;
+    overflow: scroll;
+    padding: 20px;
+    img{
+      width: 50px;
+      height: 50px;
+      margin: 5px;
+      border: 1px solid black;
+      border-radius: 100px;
+      box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.4);
+    }
+  }
+  &--detail{
+    border-bottom: 1px solid black;
+    padding: 5px;
+  }
+  &--user{
+    margin-right: 100px;
+  }
+}
+
+#follower_modan_open,
+#following_modan_open{
+  cursor: pointer;
+}
