--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,9 @@
   <div class="header-top">
     <div class="header-top__logo">BaskeNav</div>
     <div class="header-top__admin">
-      <%= link_to 'ゲストログイン(閲覧用)', guest_sign_in_path, class: "guest-login", method: :post %>
-      <%= link_to "施設登録の方はこちら", new_admin_registration_path, class: "header-top__sign-up under_line" %>
-      <%= link_to "施設管理者用ログイン", new_admin_session_path, class: "header-top__sign-in under_line" %>
+      <%= link_to 'ゲストログイン(閲覧用)', guest_sign_in_path, class: "header-top--guest-login under_line", method: :post %>
+      <%= link_to "施設登録の方はこちら", new_admin_registration_path, class: "header-top--sign-up under_line" %>
+      <%= link_to "施設管理者用ログイン", new_admin_session_path, class: "header-top--sign-in under_line" %>
     </div>
   </div>
 
@@ -23,6 +23,7 @@
           <li><%= link_to "Posts", posts_path, class: "header-nav--list-item__reverse" %></li>
           <li><%= link_to "Facility", facilities_path, class: "header-nav--list-item__reverse" %></li>
           <li><%= link_to "Logout", destroy_user_session_path, method: :delete, class: "header-nav--list-item__reverse" %></li>
+          <a id="search_modan_open"><i class="fas fa-search"></i>ユーザー検索</a>
 
         <% elsif admin_signed_in? %>　<!--施設投稿者がログインした時のヘッダー-->
           <li><%= link_to "Game", game_west_path(year: :"2020"), class: "header-nav--list-item" %></li>
