--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,16 +8,11 @@
     </div>
   <% end %>
 
-  <div class="user-info--follow">
-    <% if user != current_user %>
-      <% if current_user.following?(user) %>
-        <a id="modan_open">Chatsを始める</a>
-        <%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete, class:"btn btn-success" %>
-      <% else %>
-        <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class:"btn btn-success" %>
-      <% end %>
-    <% end %>
-  </div>
+  <% if user != current_user %>
+    <div class="user-info--follow">
+      <%= render "relationships/showpage", user: user %>
+    </div>
+  <% end %>
 
   <div class="user-info--doing">
     <div class="user-info--image">
@@ -28,14 +23,21 @@
         <%= user.posts.count %><br>
         投稿
       </p>
-      <p>
-        <%= link_to user.followings.count, user_followings_path(user) %><br>
-        フォロー
-      </p>
-      <p>
-        <%= link_to user.followers.count, user_followers_path(user) %><br>
-        フォロワー
-      </p>
+      <% if user != current_user %>
+        <p id="following_modan_open" class="under_line follow_count">
+          <%= render "relationships/follow_count", user: user %>
+        </p>
+        <p id="follower_modan_open" class="under_line follower_count">
+          <%= render "relationships/follower_count", user: user %>
+        </p>
+      <% else %>
+        <p id="following_modan_open" class="under_line current_user_follow_count">
+          <%= render "relationships/follow_count", user: user %>
+        </p>
+        <p id="follower_modan_open" class="under_line urrent_user_follower_count">
+          <%= render "relationships/follower_count", user: user %>
+        </p>
+      <% end %>
     </div>
   </div>
 
