--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,45 @@
 <div class="user-show">
   <div class="user-show--info">
     <%= render "users/info", user: @user %>
-    <div class="user-show--trash-box">
-      <%= image_tag("trash-box.png") %>
-    </div>
+    <% if @user == current_user %>
+      <div class="user-show--trash-box">
+        <%= image_tag("trash-box.png") %>
+        <p>投稿をドラック＆ドロップで削除できます</p>
+      </div>
+    <% end %>
   </div>
 
   <div class="user-show--posts">
     <%= render "posts/posts", posts: @posts, title: "mypost.png" %>
   </div>
 </div>
+
+<div class="user-show--following">
+  <div class="follow">
+    <div class="follow--background modan_close1 modan_close2"></div>
+    <div class="follow--member">
+      <div class="follow--header">
+        <h1>followings</h1>
+      </div>
+      <div class="follow--following-info">
+        <%= render "relationships/follow", users: @user_followings %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="user-show--follower">
+  <div class="follow">
+    <div class="follow--background modan_close1 modan_close2"></div>
+    <div class="follow--member">
+      <div class="follow--header">
+        <h1>followers</h1>
+      </div>
+      <div class="follow--follower-info">
+        <%= render "relationships/follow", users: @user_followers %>
+      </div>
+    </div>
+  </div>
+</div>
+
 
