--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,16 +1,7 @@
 <div class="main-contents">
+  <div id="particles-js"></div>
   <div class="main-contents--main-view"></div>
-  <div class="main-contents--news">
-    <div class="main-contents--text">
-      <h1>バスケ情報</h1>
-      <p>
-        NBA試合結果やバスケに関する情報をいち早く確認することができます<br>
-      </p>
-      <ul class="slider">
-        <%= render "homes/news_info", articles: @articles %>
-      </ul>
-    </div>
-  </div>
+
 
   <div class="main-contents--fixed-background main-contents--background-1">
     <div class="title">
@@ -46,6 +37,18 @@
     	<p>あなたの知っている情報も共有してバスケファン同士で日本バスケを盛り上げていきましょう！</p>
     	<%= link_to "Sign-up", new_user_registration_path, class: "main-contents--sign-up" %>
   	</div>
+  </div>
+
+  <div class="main-contents--news">
+    <div class="main-contents--text">
+      <h1>バスケ情報</h1>
+      <p>
+        NBA試合結果やバスケに関する情報をいち早く確認することができます<br>
+      </p>
+      <ul class="slider">
+        <%= render "homes/news_info", articles: @articles %>
+      </ul>
+    </div>
   </div>
 
   <div class="main-contents--info">
